# enV5-base-project

./: .clang-format  .commitlintrc.js  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  README.md  helper.cmake  helpers.cmake  package-lock.json  pre-commit.requirements.txt
documentation/: Contribution.adoc
examples/basics/: CMakeLists.txt
examples/basics/blink/: BlinkLed.c  CMakeLists.txt
src/: CMakeLists.txt  Main.c  NetworkConfiguration.c
test/hardware/: CMakeLists.txt  HardwaretestHelper.c  HardwaretestHelper.h  HardwaretestMqttPublish.c
test/unit/: CMakeLists.txt  UnittestFirst.c
